Sat Mar 20 14:55:15 1999  DanEspen  <dje@blue>

	* FvwmTalk: If I did this right, the FvwmTalk directory should
	disappear.

	* FvwmForm/ReadXServer.c: Paste tab as a space when the input form
	only has one input field.

	* FvwmForm/FvwmForm.c (main): Remove the builtin customization form,
	there is now a way to do this with a standalone form definition.
	Add "UseData" command.

	* FvwmForm/FvwmForm.1: Add FvwmTalk, other cleanups.

	* FvwmForm/FormFvwmTalkHelp.: New naming rule.

	* FvwmForm/FormFvwmTalk.: New naming rule.

	* FvwmForm/FormFvwmRlogin.: New naming rule.

	* FvwmForm/FormFvwmQuitVerify.: New naming rule.

	* FvwmForm/FormFvwmForm.: New naming rule.

	* FvwmForm/FormFvwmCapture.: New naming rule.

	* FvwmForm/Makefile.am (config_DATA): Remove DefineMe.c, rename forms,
	provide FvwmTalk replacement shell.

1999-03-16  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmTaskBar/Start.c:
	(StartButtonUpdate): new return value (needsupdate)
	* FvwmTaskBar/FvwmTaskBar.c (LoopOnEvents): fixed bug: start button
	staying depressed

	* FvwmTaskBar/Goodies.c (GoodiesParseConfig): fixed some parsing bugs

	* FvwmTaskBar/FvwmTaskBar.1: describe Mailcheck option

	* FvwmTaskBar/Goodies.c (DrawGoodies):
	(GoodiesParseConfig): implemented 'Mailcheck' option

Fri Mar 19 19:50:08 1999  Steve ROBBINS  

	* FvwmEvent/Makefile.am
	* FvwmForm/Makefile.am
	* FvwmTaskBar/Makefile.am: remove repeated include directive from
	INCLUDES.

1999-03-19  Hippo

	* FvwmWinList/*: new option FollowWindowList: shows the windows in the
	order that Next/Prev will search (apart from
	WindowListSkip/CirculateSkip differences). Documented ShowCurrrentDesk
	option.

1999-03-18  Paul D. Smith  <psmith@gnu.org>

	* FvwmCommand/findcmd: Rewrite to use only very basic awk.  This
	version should work with any awk.

1999-03-17  Steven Michael ROBBINS  <stever@jeff.cs.mcgill.ca>

	* FvwmScript/types.h: ifdef XPM the include for xpm.h.
