@@ -213,10 +213,16 @@ color specifications are always of the form "rgb:rrrr/gggg/bbbb".
 \fBupper\fP \fBinc\fP \fBpage-inc\fP \fBpage-size\fP [ \fBdigits\fP ]"
 Adds a scale. 
 
-.IP "FvwmGtkSpinButton \fBname\fP \fBvalue\fP \fBlower\fP
+.IP "*FvwmGtkSpinButton \fBname\fP \fBvalue\fP \fBlower\fP
 \fBupper\fP \fBinc\fP \fBpage-inc\fP \fBpage-size\fP \fBclimb-rate\fP [
 \fBdigits\fP ]"
 Adds a spin button.
+
+.IP "*FvwmGtkOptionMenu \fBname\fP"
+.IP "*FvwmGtkEndOptionMenu"
+.IP "*FvwmGtkItem \fBlabel\fP \fBvalue\fP [ \fBon\fP ]"
+Can be used to create option menus.
+
 
 .SH COMMON CONFIGURATION
 The following commands can be used for menus and dialogs.
